samples/_failures_safe/1761333891_616b95_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9c655d9.c: In function ‘main’:
./samples/SAFE/__tmp_b9c655d9.c:135:12: error: missing terminating " character
  135 |     printf("Enter elements of matrix A:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b9c655d9.c:135:5: error: expected expression at end of input
  135 |     printf("Enter elements of matrix A:\
      |     ^~~~~~
./samples/SAFE/__tmp_b9c655d9.c:135:5: error: expected declaration or statement at end of input
